--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "2a5e4555-4242-4a10-9dc1-cc4983ef4d46"
 authors = ["Filip Tronarp <filip.tronarp@uni-tuebingen.de> and contributors"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+
 [compat]
 julia = "1.8"
 
